; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/xen/xenstore/extr_xenstore.c_xs_watch.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/xen/xenstore/extr_xenstore.c_xs_watch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iovec = type { i8*, i8* }

@XST_NIL = common dso_local global i32 0, align 4
@XS_WATCH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @xs_watch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xs_watch(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca [2 x %struct.iovec], align 16
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = ptrtoint i8* %6 to i64
  %8 = inttoptr i64 %7 to i8*
  %9 = getelementptr inbounds [2 x %struct.iovec], [2 x %struct.iovec]* %5, i64 0, i64 0
  %10 = getelementptr inbounds %struct.iovec, %struct.iovec* %9, i32 0, i32 1
  store i8* %8, i8** %10, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = call i8* @strlen(i8* %11)
  %13 = getelementptr i8, i8* %12, i64 1
  %14 = getelementptr inbounds [2 x %struct.iovec], [2 x %struct.iovec]* %5, i64 0, i64 0
  %15 = getelementptr inbounds %struct.iovec, %struct.iovec* %14, i32 0, i32 0
  store i8* %13, i8** %15, align 16
  %16 = load i8*, i8** %4, align 8
  %17 = ptrtoint i8* %16 to i64
  %18 = inttoptr i64 %17 to i8*
  %19 = getelementptr inbounds [2 x %struct.iovec], [2 x %struct.iovec]* %5, i64 0, i64 1
  %20 = getelementptr inbounds %struct.iovec, %struct.iovec* %19, i32 0, i32 1
  store i8* %18, i8** %20, align 8
  %21 = load i8*, i8** %4, align 8
  %22 = call i8* @strlen(i8* %21)
  %23 = getelementptr i8, i8* %22, i64 1
  %24 = getelementptr inbounds [2 x %struct.iovec], [2 x %struct.iovec]* %5, i64 0, i64 1
  %25 = getelementptr inbounds %struct.iovec, %struct.iovec* %24, i32 0, i32 0
  store i8* %23, i8** %25, align 16
  %26 = load i32, i32* @XST_NIL, align 4
  %27 = load i32, i32* @XS_WATCH, align 4
  %28 = getelementptr inbounds [2 x %struct.iovec], [2 x %struct.iovec]* %5, i64 0, i64 0
  %29 = call i32 @xs_talkv(i32 %26, i32 %27, %struct.iovec* %28, i32 2, i32* null, i32* null)
  ret i32 %29
}

declare dso_local i8* @strlen(i8*) #1

declare dso_local i32 @xs_talkv(i32, i32, %struct.iovec*, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
